
DescTools 0.99.38 (2020-09-09)
------------------------------

NEW FUNCTIONS ADDED:
  * ORToRelRisk.glm() converts odds ratios from a logistic regression
    to relative risks.
  * RevCode() reverses the codes of a numeric variable (e.g. a Likert 
    scale).  
  * MADCI() calculates confidence intervals for the median absolute deviation(s).  

UPDATED FUNCTIONS:
  * The Format() argument "leading" has been replaced by "ldigits". Leading zeros
    can now be coded with the number of leading zeros instead of using
    character coding like "000".
  * BinomDiffCI() gets two further methods "haldane" and "jeffery perks". 
  * XLView() gets a new argument "sep" (following a request by Mahboob).
  * CutQ() accepts integer number for breaks.

  
BUGFIXES:
  * Bug in BinomDiffCI() for methods score and scorecc have been corrected.
    (Credits to Meredith Peratikos)

DEPRECATED:
  * 




DescTools 0.99.37 (2020-07-09)
------------------------------

NEW FUNCTIONS ADDED:
  * PlotConDens() plots conditional densities using a grouping variable.
  * StrSplit() is a convenience function with more defaults than strsplit.
  * SplitToCol() splits columns of a data.frame using a split.
  * WrdDeleteBookmark() extends the suite of WrdBookmark functions.
  * CmykToRgb(), CmyToCmyk(), CmykToCmy() have been added to have a 
    color code conversion path from RGB to CMYK.

UPDATED FUNCTIONS:
  * Append() for data.frames can also append rows now.
  * PlotCashflow() gain some more arguments enhancing its flexibility.
  * We switch to a more flexible implementation of Barnard test by 
    Peter Calhoun's Exact package.
  * Minor changes to PlotLinesA() to be able to easier add lines.  
  * ToWrd.TMod() uses a more sophisticated export logic for splitting the
    columns of a resulting data.frame to a Word table compatible 
    character matrix.
  * Format() interpretes negative digits in the same manner as round.
  * Format() accepts defined named templates with the argument fmt.