@@ -1,7 +1,7 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.37.011
+Version: 0.99.37.012
 Date: 2020-09-09
 Authors@R: c(
   person("Andri", "Signorell", email = "andri@signorell.net", role = c("aut", "cre")),
@@ -9,6 +9,7 @@ Authors@R: c(
   person("Andreas"       , "Alfons",              role = c("ctb")),
   person("Nanina"        , "Anderegg",            role = c("ctb")),
   person("Tomas"         , "Aragon",              role = c("ctb")),
+  person("Chandima"      , "Arachchige",          role = c("ctb")),
   person("Antti"         , "Arppe",               role = c("ctb")),
   person("Adrian"        , "Baddeley",            role = c("ctb")),
   person("Kamil"         , "Barton",              role = c("ctb")),
@@ -78,6 +79,7 @@ Authors@R: c(
   person("Nick"          , "Parsons",             role = c("ctb")),
   person("Sandrine"      , "Pavoine",             role = c("ctb")),
   person("Tony"          , "Plate",               role = c("ctb")),
+  person("Luke"          , "Prendergast",         role = c("ctb")),
   person("Roland"        , "Rapold",              role = c("ctb")),
   person("William"       , "Revelle",             role = c("ctb")),
   person("Tyler"         , "Rinker",              role = c("ctb")),
