@@ -79,7 +79,7 @@ export(
 "SendOutlookMail", "MultMerge", "ToWrdB", "ToWrdPlot", "WrdBookmark","WrdOpenFile",
 "CmToPts", "PtsToCm","PlotPairs", "IQRw", "ImputeKnn", "AllIdentical","CountWorkDays",
 "VanWaerdenTest", "RSessionAlive", "RTempdirAlive", "StripAttr", "PlotConDens", "StrSplit", "SplitToCol",
-"CmykToCmy", "CmyToCmyk", "RgbToCmy", "CmykToRgb", "RevCode", "MADCI"
+"CmykToCmy", "CmyToCmyk", "RgbToCmy", "CmykToRgb", "RevCode", "MADCI","QuantileCI"
 )
 
 
