@@ -7,7 +7,8 @@ NEW FUNCTIONS ADDED:
     to relative risks.
   * RevCode() reverses the codes of a numeric variable (e.g. a Likert 
     scale).  
-  * MADCI() calculates confidence intervals for the median absolute deviation(s).  
+  * MADCI() calculates confidence intervals for the median absolute deviation(s).
+  * QuantileCI() calculates confidence intervals for any quantile.
 
 UPDATED FUNCTIONS:
   * The Format() argument "leading" has been replaced by "ldigits". Leading zeros
